@@ -68,8 +68,8 @@ import os.path
 def buildIt(target, source, env):
     if not os.path.exists('build'):
         os.mkdir('build')
-    f1=open(source[0], 'r')
-    f2=open(target, 'w')
+    f1=open(str(source[0]), 'r')
+    f2=open(str(target[0]), 'w')
     f2.write(f1.read())
     f2.close()
     f1.close()
