@@ -70,7 +70,8 @@ test.write('SConstruct', """
 import os
 import string
 def func(env, target, source):
-    cmd = r'%s build.py %%s 3 %%s' %% (target, string.join(source, ' '))
+    cmd = r'%s build.py %%s 3 %%s' %% (string.join(map(str, target)),
+                                       string.join(map(str, source)))
     print cmd
     return os.system(cmd)
 B = Builder(name = 'B', action = func)
@@ -96,7 +97,8 @@ class bld:
 	print cmd
         return os.system(cmd)
     def get_contents(self, env, target, source):
-        return self.cmd %% (target, string.join(source, ' '))
+        return self.cmd %% (string.join(map(str, target)),
+                            string.join(map(str, source)))
 B = Builder(name = 'B', action = bld())
 env = Environment(BUILDERS = [B])
 env.B(target = 'foo.out', source = 'foo.in')
